--- a/app/src/main/res/menu/events.xml
+++ b/app/src/main/res/menu/events.xml
@@ -20,5 +20,10 @@
 		android:orderInCategory="80"
 		android:showAsAction="never"
 		android:title="@string/future_events"/>
+	<item
+		android:id="@+id/sign_out"
+		android:orderInCategory="500"
+		android:showAsAction="never"
+		android:title="@string/sign_out"/>
 
 </menu>
