--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -15,5 +15,10 @@
 		android:orderInCategory="80"
 		android:showAsAction="ifRoom"
 		android:title="@string/add_event"/>
+	<item
+		android:id="@+id/sign_out"
+		android:orderInCategory="500"
+		android:showAsAction="never"
+		android:title="@string/sign_out"/>
 
 </menu>
