--- a/app/src/main/res/menu/events.xml
+++ b/app/src/main/res/menu/events.xml
@@ -17,9 +17,14 @@
 		android:title="@string/past_events"/>
 	<item
 		android:id="@+id/future_events"
-		android:orderInCategory="80"
+		android:orderInCategory="90"
 		android:showAsAction="never"
 		android:title="@string/future_events"/>
+	<item
+		android:id="@+id/sync"
+		android:orderInCategory="100"
+		android:showAsAction="never"
+		android:title="@string/sync"/>
 	<item
 		android:id="@+id/sign_out"
 		android:orderInCategory="500"
