--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -16,6 +16,11 @@
 		android:showAsAction="ifRoom"
 		android:title="@string/add_event"/>
 	<item
+		android:id="@+id/sync"
+		android:orderInCategory="100"
+		android:showAsAction="never"
+		android:title="@string/sync"/>
+	<item
 		android:id="@+id/sign_out"
 		android:orderInCategory="500"
 		android:showAsAction="never"
